# cmake_example

./: README.md
01.hello_world/: CMakeLists.txt  hello.cpp
02.hello_boost/: CMakeLists.txt  main.cpp
03.hello_qt_console/: CMakeLists.txt  main.cpp
04.hello_qt_gui/: CMakeLists.txt  Student.cpp  Student.h  Student.ui  main.cpp
